# utx

./: .gitignore  .utx.deploy.json  .utxignore  CMakeLists.txt  Dockerfile  README.md  install.sh  main.cpp  utx.md
common/: Base64.hpp  Hash.cpp  Hash.hpp  Helper.hpp  IO.hpp  Logger.hpp  ScopedTimer.hpp  ThreadPool.hpp  Uuid.cpp  Uuid.hpp
domain/: Types.cpp  Types.hpp
domain/deploy/: DeployPlanner.cpp  DeployPlanner.hpp
domain/graph/: Action.cpp  Action.hpp  Graph.cpp  Graph.hpp  GraphDiffer.cpp  GraphDiffer.hpp  GraphElement.cpp  GraphElement.hpp  IGraphRebuilder.hpp  IGraphVisitor.hpp
domain/model/: AtomicBlock.hpp  Attestation.hpp  Chain.hpp  ChainConfig.hpp  Http.hpp  NodeInfo.hpp  Paradox.hpp  Types.hpp
domain/port/: IChainRepository.hpp  ICryptoService.hpp  IParadoxFragmentRepository.hpp  ISecretSharing.hpp  IStateRepository.hpp  ISymmetricCrypto.hpp
infrastructure/blackhole/: BlackholeRebuilder.cpp  BlackholeRebuilder.hpp  GraphActionEmitter.hpp
infrastructure/chain/: NetworkClient.hpp  TxManager.cpp  TxManager.hpp
infrastructure/context/: AppContext.hpp
infrastructure/crypto/: OpenSSLCryptoService.cpp  OpenSSLCryptoService.hpp
infrastructure/deploy_config/: DeployClient.cpp  DeployClient.hpp  DeployConfig.cpp  DeployConfig.hpp
infrastructure/ignore/: IgnoreManager.hpp
infrastructure/languages/cpp/: CppGenerator.hpp  CppParser.hpp
infrastructure/languages/css/: CssGenerator.hpp  CssParser.hpp
infrastructure/languages/go/: GoGenerator.hpp  GoParser.hpp
infrastructure/languages/html/: HtmlGenerator.hpp  HtmlParser.hpp
infrastructure/languages/javascript/: JsExecutor.hpp  JsGenerator.cpp  JsGenerator.hpp  JsNodeEmitter.hpp  JsNodeFactory.hpp  JsParser.cpp  JsParser.hpp  SandboxedVm.hpp  VmInfraBinder.hpp  VmPool.hpp
infrastructure/languages/markdown/: MarkdownGenerator.hpp  MarkdownParser.hpp
infrastructure/network/: Serialization.hpp
infrastructure/parser/: GraphParser.cpp  GraphParser.hpp
infrastructure/wallet/: WalletHelper.hpp
use_case/: AbstractCommand.hpp  AddCommand.hpp  ApiCommand.hpp  ChainCommand.hpp  CommitCommand.hpp  DownloadCommand.hpp  GraphCommand.hpp  IdentityCommand.hpp  IgnoreCommand.hpp  InitCommand.hpp  LastCommitCommand.hpp  LoginCommand.hpp  PushCommand.hpp  StatusCommand.hpp  UncommitCommand.hpp
